WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 229946
webgl/2.0.y/deqp/functional/gles3/negativeshaderapi.html fails on Metal
https://bugs.webkit.org/show_bug.cgi?id=229946
Summary
webgl/2.0.y/deqp/functional/gles3/negativeshaderapi.html fails on Metal
Kimmo Kinnunen
Reported
2021-09-06 02:19:08 PDT
This test runs the WebGL Test listed below in an iframe and reports PASS or FAIL. Test: ../../../../resources/webgl_test_files/deqp/functional/gles3/negativeshaderapi.html?webglVersion=2 [ 1: PASS ] negative_shader_api.create_shader: Passed [ 2: PASS ] negative_shader_api.attach_shader: Passed [ 3: PASS ] negative_shader_api.detach_shader: Passed [ 4: PASS ] negative_shader_api.link_program: Passed [ 5: PASS ] negative_shader_api.use_program: Passed [ 6: PASS ] negative_shader_api.bind_sampler: Passed [ 7: PASS ] negative_shader_api.get_sampler_parameteriv: Passed [ 8: PASS ] negative_shader_api.get_sampler_parameterfv: Passed [ 9: PASS ] negative_shader_api.sampler_parameteri: Passed [ 10: PASS ] negative_shader_api.sampler_parameteriv: Passed [ 11: PASS ] negative_shader_api.sampler_parameterf: Passed [ 12: PASS ] negative_shader_api.get_attrib_location: Passed [ 13: PASS ] negative_shader_api.get_uniform_location: Passed [ 14: PASS ] negative_shader_api.bind_attrib_location: Passed [ 15: PASS ] negative_shader_api.uniform_block_binding: Passed [ 16: PASS ] negative_shader_api.uniformf_incompatible_type: Passed [ 17: PASS ] negative_shader_api.uniformfv_incompatible_type: Passed [ 18: PASS ] negative_shader_api.uniformfv_invalid_count: Passed [ 19: PASS ] negative_shader_api.uniformi_incompatible_type: Passed [ 20: PASS ] negative_shader_api.uniformiv_incompatible_type: Passed [ 21: PASS ] negative_shader_api.uniformiv_invalid_count: Passed [ 22: PASS ] negative_shader_api.uniformui_incompatible_type: Passed [ 23: PASS ] negative_shader_api.uniformuiv_incompatible_type: Passed [ 24: PASS ] negative_shader_api.uniformuiv_invalid_count: Passed [ 25: PASS ] negative_shader_api.uniform_matrixfv_incompatible_type: Passed [ 26: PASS ] negative_shader_api.uniform_matrixfv_invalid_count: Passed [ 27: PASS ] negative_shader_api.bind_transform_feedback: Passed [ 28: PASS ] negative_shader_api.begin_transform_feedback: Passed [ 29: PASS ] negative_shader_api.pause_transform_feedback: Passed [ 30: PASS ] negative_shader_api.resume_transform_feedback: Passed [ 31: PASS ] negative_shader_api.end_transform_feedback: Passed [ 32: FAIL ] negative_shader_api.get_transform_feedback_varying: Expected either gl.INVALID_OPERATION or gl.INVALID_VALUE, but got gl.NO_ERROR. [ 33: PASS ] negative_shader_api.transform_feedback_varyings: Passed [ 34: PASS ] negative_shader_api.transform_feedback_varyings: successfullyParsed is true [ FAIL ] 1 failures reported
Attachments
Patch
(3.12 KB, patch)
2021-09-06 11:56 PDT
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
Patch
(6.20 KB, patch)
2021-09-07 04:03 PDT
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
Patch for landing
(6.07 KB, patch)
2021-09-07 23:49 PDT
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
Patch for landing
(6.04 KB, patch)
2021-09-08 01:37 PDT
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Kimmo Kinnunen
Comment 1
2021-09-06 11:56:33 PDT
Created
attachment 437432
[details]
Patch
Kimmo Kinnunen
Comment 2
2021-09-06 11:59:22 PDT
***
Bug 229945
has been marked as a duplicate of this bug. ***
Kimmo Kinnunen
Comment 3
2021-09-06 23:04:54 PDT
red due to TestExpectation patch context hunk missing until
bug 229948
lands.
Kimmo Kinnunen
Comment 4
2021-09-07 04:03:45 PDT
Created
attachment 437483
[details]
Patch
Kenneth Russell
Comment 5
2021-09-07 13:45:10 PDT
Comment on
attachment 437483
[details]
Patch Looks good! r+
Kimmo Kinnunen
Comment 6
2021-09-07 23:49:22 PDT
Created
attachment 437601
[details]
Patch for landing
Kimmo Kinnunen
Comment 7
2021-09-08 01:37:20 PDT
Created
attachment 437611
[details]
Patch for landing
EWS
Comment 8
2021-09-08 03:21:27 PDT
Committed
r282136
(
241433@main
): <
https://commits.webkit.org/241433@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 437611
[details]
.
Radar WebKit Bug Importer
Comment 9
2021-09-08 03:22:25 PDT
<
rdar://problem/82865039
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug