webgl/2.0.y/deqp/functional/gles3/negativeshaderapi.html fails on Metal https://bugs.webkit.org/show_bug.cgi?id=229946

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2021-09-08
Reviewed by Kenneth Russell.

Source/WebCore:

Add a missing check for link status.

Fixes tests:
webgl/2.0.0/deqp/functional/gles3/negativeshaderapi.html
webgl/2.0.y/deqp/functional/gles3/negativeshaderapi.html

* html/canvas/WebGL2RenderingContext.cpp:
(WebCore::WebGL2RenderingContext::getTransformFeedbackVarying):

LayoutTests:

Enable webgl/2.0.y/deqp/functional/gles3/negativeshaderapi.html
explicitly until 2.0.y is activated.

* webgl/TestExpectations:

Canonical link: https://commits.webkit.org/241433@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282136 268f45cc-cd09-0410-ab3c-d52691b4dbfc